building out API
