# northwind-modulith/src/main/java/en93/sample/northwind_modulith/webapp/suppliers/SuppliersController.java
@@ -1,7 +1,7 @@
 package en93.sample.northwind_modulith.webapp.suppliers;
 
 import en93.sample.northwind_modulith.generated.webapp.api.SuppliersApi;
-import en93.sample.northwind_modulith.generated.webapp.model.Customer;
+import en93.sample.northwind_modulith.generated.webapp.model.SupplierDTO;
 import org.springframework.http.ResponseEntity;
 import org.springframework.web.bind.annotation.RestController;
 
@@ -17,7 +17,7 @@ public class SuppliersController implements SuppliersApi {
     }
 
     @Override
-    public ResponseEntity<List<Customer>> getSuppliers(String customerKey, String searchCustomerName) {
-        return null;
+    public ResponseEntity<List<SupplierDTO>> getSuppliers(String customerKey, String searchCustomerName) {
+        return ResponseEntity.ok(suppliersService.getSuppliers(customerKey, searchCustomerName));
     }
 }
